added product tile

--- a/Fooseshoes/Fooseshoes.WebSite/css/styles.css
+++ b/Fooseshoes/Fooseshoes.WebSite/css/styles.css
@@ -1,12 +1,137 @@
 ﻿body {
   width: 960px; }
 
+.shoe-image-icon {
+  border-style: none !important;
+  padding: 0px 15px !important;
+  height: 30px !important; }
+
+.items {
+  height: 230px;
+  display: flex;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  flex-wrap: wrap; }
+
+.out-of-stock, .sale {
+  position: relative;
+  top: -273px;
+  margin-left: 178px;
+  background-color: #f27e4b;
+  width: 55px;
+  height: 55px;
+  font-family: Aller;
+  color: white;
+  padding-top: 15px;
+  line-height: 13px;
+  font-size: 11px;
+  text-align: center; }
+
+.sale {
+  padding-top: 20px;
+  background-color: black; }
+
+.shoe-price {
+  position: relative;
+  top: -55px;
+  margin-left: 10px;
+  background-color: #57c5a0;
+  width: 55px;
+  height: 55px;
+  font-family: Logo-btns;
+  color: white;
+  padding-top: 21px;
+  font-size: 13px;
+  text-align: center; }
+
+.shoe-legend {
+  width: 243px;
+  height: 40px;
+  background-color: white;
+  border-top-style: solid;
+  border-color: #cccccc;
+  border-width: 1px;
+  font-family: Aller_Rg;
+  padding: 8px 75px;
+  font-size: 16px; }
+
+.shoe-with-discription {
+  width: 253px;
+  height: 218px;
+  padding: 5px;
+  margin-bottom: 10px; }
+
+.shoe {
+  background-image: url("../images/shoe1.jpg");
+  width: 243px;
+  height: 178px; }
+
+.show-all-btn {
+  color: #bcb5a7 !important;
+  font-family: Aller;
+  border-style: solid;
+  border-color: #bcb5a7;
+  border-width: 1px;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 4px 20px 4px 20px;
+  height: 24px; }
+
+.show-all-btn:hover {
+  border-color: #716e69;
+  color: #716e69 !important; }
+
+.home-products-legend {
+  font-family: Aller_Lt;
+  font-size: 22px;
+  line-height: 22px;
+  display: flex;
+  justify-content: space-between; }
+
+.home-products {
+  background-color: #ebe7df;
+  padding: 25px 100px 25px 100px; }
+
+.special-offers-item-badge {
+  font-family: Aller_Lt;
+  color: white;
+  font-size: 24px;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 10px 20px 10px 20px;
+  line-height: 24px;
+  margin-top: 50px;
+  height: 45px;
+  display: inline-block; }
+
+.special-offers-item {
+  width: 243px;
+  height: 145px;
+  margin: 10px 5px;
+  display: flex;
+  justify-content: center; }
+
+#on-sale {
+  background-image: url("../images/on_sale.jpg"); }
+
+#must-have {
+  background-image: url("../images/must_have.jpg"); }
+
+#special-offers {
+  background-image: url("../images/special_offers.jpg"); }
+
+.special-offers {
+  background-color: #242424;
+  width: 960px;
+  padding: 0px 100px 0px 100px;
+  height: 165px;
+  display: flex; }
+
 .icon-bar {
   width: 200px;
   height: 40px;
   display: flex; }
 
-.slider-image-icon {
+.slider-image-icon, .shoe-image-icon {
   width: 35px;
   height: 35px;
   background-color: white;
@@ -106,7 +231,7 @@
   width: 960px;
   height: 70px;
   background-color: #2e2e2e;
-  padding: 0px 220px 0 220px;
+  padding: 0px 265px 0 220px;
   display: flex; }
 
 #nav-bar {
@@ -279,7 +404,8 @@
 #logo-bar {
   padding: 0px 100px 0px 100px;
   background-color: black;
-  display: flex; }
+  display: flex;
+  width: 960px; }
 
 #logo-btn {
   padding: 6px 0px 6px 0px;
