--- a/Fooseshoes/Fooseshoes.WebSite/css/styles.css
+++ b/Fooseshoes/Fooseshoes.WebSite/css/styles.css
@@ -1,6 +1,185 @@
 ﻿body {
   width: 960px; }
 
+#social-icons {
+  display: flex; }
+
+#email-holder {
+  display: flex; }
+
+.fa-facebook, .fa-flickr, .fa-twitter, .fa-google, .fa-linkedin {
+  background: #2e2e2e;
+  color: #7d7d7d;
+  padding: 7px 5px;
+  font-size: 20px !important;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  text-decoration: none;
+  margin: 0px 2px 0px 2px; }
+
+.social-icon {
+  width: 22px;
+  height: 25px;
+  font-size: 15px;
+  color: #7d7d7d;
+  background-color: #2e2e2e;
+  padding-left: 6px; }
+
+#submit {
+  width: 32px;
+  height: 35px;
+  font-size: 30px;
+  color: #2e2e2e;
+  background-color: #7d7d7d;
+  display: flex;
+  text-align: center;
+  padding: 5px; }
+
+#email-for-news {
+  font-family: Aller_BdIt;
+  width: 180px;
+  height: 35px;
+  background-color: #2e2e2e;
+  color: #7d7d7d;
+  border: solid 1px #7d7d7d;
+  border-radius: 0px; }
+
+#socials-nav {
+  background-color: #242424;
+  width: 960px;
+  padding: 30px 100px 30px 100px;
+  font-family: Aller_Rg;
+  font-size: 12px;
+  color: #a4a4a4;
+  display: flex;
+  border-top: solid 1px black;
+  height: 100px;
+  display: flex;
+  justify-content: space-between; }
+
+.flickr_badge_image {
+  margin: 0px;
+  display: inline; }
+
+.flickr_badge_image img {
+  border: 0px solid #000 !important;
+  padding: 1px;
+  margin: 1px;
+  width: 76px;
+  height: 60px; }
+
+#flickr_badge_wrapper {
+  width: 253px;
+  text-align: left;
+  margin: 0px 10px 0px 17px;
+  padding-top: 0px; }
+
+#tweet {
+  width: 253px !important;
+  border: none !important; }
+
+#tweet iframe {
+  border: none !important;
+  box-shadow: none !important; }
+
+.static-text {
+  width: 253px;
+  padding: 20px 20px 0px 20px;
+  text-align: justify; }
+
+#widgets {
+  background-color: #242424;
+  width: 960px;
+  padding: 30px 100px 30px 100px;
+  font-family: Aller_Rg;
+  font-size: 12px;
+  color: #a4a4a4;
+  display: flex;
+  justify-content: space-between; }
+
+.grid-btn {
+  color: #bcb5a7 !important;
+  font-family: Aller;
+  border-style: solid;
+  border-color: #bcb5a7;
+  border-width: 1px;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 5px 4px 5px 4px;
+  height: 24px;
+  display: flex;
+  margin-right: 10px; }
+
+.grid-btn:hover {
+  border-color: #716e69;
+  color: #716e69 !important; }
+
+#sort-down-icon:hover {
+  border-color: #716e69;
+  color: #716e69 !important; }
+
+#sort-down-icon {
+  background-color: #bcb5a7;
+  border-radius: 7px;
+  width: 14px;
+  height: 13px;
+  color: #ebe7df;
+  font-size: 10px;
+  padding: 2px 2px 2px 2px;
+  margin-left: 10px; }
+
+.legend-group {
+  display: flex;
+  justify-content: flex-start; }
+
+.products-text {
+  color: #bcb5a7;
+  font-family: Aller;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 8px 8px 8px 30px; }
+
+#products-page {
+  background-color: #ebe7df;
+  padding: 25px 100px 25px 100px;
+  display: none; }
+
+.down-icon {
+  background-color: white;
+  border-radius: 8px;
+  width: 16px;
+  height: 15px;
+  color: black;
+  font-size: 10px;
+  padding: 2px 2px 2px 3px;
+  margin-top: 2px; }
+
+.shop-by-btn {
+  width: 180px;
+  height: 50px;
+  font-size: 14px;
+  padding: 15px 20px 15px 40px;
+  background-color: #242424;
+  margin-left: 10px;
+  display: flex;
+  justify-content: space-between; }
+
+.shop-by-text {
+  width: 175px;
+  height: 50px;
+  padding: 12px 50px; }
+
+#shop-by {
+  width: 960px;
+  height: 70px;
+  font-family: Aller_Rg;
+  font-size: 18px;
+  color: white;
+  padding: 10px 100px;
+  background-color: #2e2e2e;
+  display: none; }
+
 .enterance {
   margin-bottom: 10px; }
 
@@ -115,6 +294,12 @@
   padding: 5px;
   margin-bottom: 10px; }
 
+.shoe-with-discription-column-view {
+  width: 760px;
+  height: 218px;
+  padding: 5px;
+  margin-bottom: 10px; }
+
 .shoe {
   background-image: url("../images/shoe1.jpg");
   width: 243px;
@@ -129,7 +314,9 @@
   font-size: 12px;
   line-height: 14px;
   padding: 4px 20px 4px 20px;
-  height: 24px; }
+  height: 24px;
+  display: flex;
+  margin-left: 12px; }
 
 .show-all-btn:hover {
   border-color: #716e69;
@@ -142,7 +329,7 @@
   display: flex;
   justify-content: space-between; }
 
-.home-products {
+#home-products {
   background-color: #ebe7df;
   padding: 25px 100px 25px 100px; }
 
@@ -173,7 +360,7 @@
 #special-offers {
   background-image: url("../images/special_offers.jpg"); }
 
-.special-offers {
+#special-offers-bar {
   background-color: #242424;
   width: 960px;
   padding: 0px 100px 0px 100px;
@@ -281,7 +468,7 @@
   display: flex;
   margin-top: 4px; }
 
-.slider {
+#slider {
   width: 960px;
   height: 70px;
   background-color: #2e2e2e;
@@ -296,12 +483,17 @@
   width: 960px;
   height: 45px;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  text-decoration: none; }
 
 .nav-bar-btns {
   display: flex; }
 
-.nav-bar-btns a {
+nav-bar-btns a {
+  color: black;
+  text-decoration: none; }
+
+.nav-bar-btn, .nav-bar-btn-active {
   border-color: #eeeeee;
   border-style: solid;
   border-width: 1px;
@@ -312,6 +504,9 @@
   padding-right: 10px;
   height: 45px;
   display: flex; }
+
+.nav-bar-btn-active {
+  color: #57c5a0 !important; }
 
 #cart-icon {
   color: #6e6e6e;
@@ -508,6 +703,3 @@
 @font-face {
   font-family: Logo-btns;
   src: url("../fonts/MyriadPro-Regular.otf") format("truetype"); }
-
-.c {
-  font-family: Logo; }
