--- a/Fooseshoes/Fooseshoes.WebSite/styles/navigation.scss
+++ b/Fooseshoes/Fooseshoes.WebSite/styles/navigation.scss
@@ -1,6 +1,6 @@
 ﻿@media only screen and (min-width: 320px) and (max-width: 768px) {
 .nav-dropbtn {
-  border-color: #eeeeee;
+    border-color: #eeeeee;
     border-style: solid;
     border-width: 1px;
     border-top: none;
@@ -11,6 +11,26 @@
     height: 45px;
     display: flex;
     background-color:white;
+    color: #c7c7c7;
+}
+
+.nav-dropdown a{
+border-color: #eeeeee;
+    border-style: solid;
+    border-width: 1px;
+    border-bottom: none;
+    padding: 14px 16px 14px 16px;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 45px;
+    display: flex;
+    background-color:white;
+    color: #c7c7c7;
+    width: 90px;
+}
+
+.material-icons{
+    color: #c7c7c7;
 }
 
 .nav-dropdown {
@@ -22,7 +42,7 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  width: 90px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
